[gd_scene load_steps=6 format=2]

[ext_resource path="res://Item/dropped_item.gd" type="Script" id=1]
[ext_resource path="res://Item/item-dropped-back.svg" type="Texture" id=2]
[ext_resource path="res://Item/dropped_font.tres" type="DynamicFont" id=3]



[sub_resource type="CircleShape2D" id=1]

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/wood.svg.png-5c7a0205f0dbbf16ef9c2d2a917ae1fb.stex"

[node name="dropped_item" type="Area2D" groups=[
"dropped",
]]
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )

[node name="col" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="back" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="spr" type="Sprite" parent="."]
position = Vector2( -0.75, 0 )
scale = Vector2( 0.75, 0.75 )
texture = SubResource( 2 )

[node name="qty" type="Label" parent="."]
margin_left = -13.0
margin_right = 21.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 3 )
align = 2

[node name="delete" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true
[connection signal="area_entered" from="." to="." method="_area_entered"]
[connection signal="timeout" from="delete" to="." method="_on_delete_timeout"]
